--- a/20230713/.vscode/launch.json
+++ b/20230713/.vscode/launch.json
@@ -16,14 +16,14 @@
       // Use IntelliSense to find out which attributes exist for C# debugging
       // Use hover for the description of the existing attributes
       // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
-      "name": ".NET A1-IntVariablesDemo Launch",
+      "name": ".NET A1IntVariablesDemo Launch",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/A1-IntVariablesDemo/bin/Debug/net8.0/A1-IntVariablesDemo.dll",
+      "program": "${workspaceFolder}/A1IntVariablesDemo/bin/Debug/net8.0/A1IntVariablesDemo.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/A1-IntVariablesDemo",
+      "cwd": "${workspaceFolder}/A1IntVariablesDemo",
       // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
       "console": "internalConsole",
       "stopAtEntry": false
