--- a/work/20230803/A4FloatingVariablesDemo/A4FloatingVariablesDemo.csproj
+++ b/work/20230803/A4FloatingVariablesDemo/A4FloatingVariablesDemo.csproj
@@ -11,4 +11,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Using Include="System.Console" Static="true" />
+  </ItemGroup>
+
 </Project>
