--- a/work/20230811/.vscode/tasks.json
+++ b/work/20230811/.vscode/tasks.json
@@ -2,13 +2,25 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "dotnet",
-			"task": "build",
+			"type": "msbuild",
 			"problemMatcher": [
 				"$msCompile"
 			],
 			"group": "build",
-			"label": "dotnet: build"
-		}
+			"label": "Build: solution",
+			"detail": "Build the 20230811.sln solution using dotnet build"
+		},
+		{
+			"label": "build",
+			"command": "dotnet",
+			"type": "process",
+			"args": [
+			  "build",
+			  "${workspaceFolder}/20230811.sln",
+			  "/property:GenerateFullPaths=true",
+			  "/consoleloggerparameters:NoSummary"
+			],
+			"problemMatcher": "$msCompile"
+		  }
 	]
 }
