--- a/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
+++ b/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
