--- a/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
+++ b/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
