--- a/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
+++ b/src/S2/ProgramStructureDemoV3/ProgramStructureDemoV3.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesVBLib\MathServicesVBLib.vbproj" />
     <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
   </ItemGroup>
 
