--- a/src/S3/.vscode/launch.json
+++ b/src/S3/.vscode/launch.json
@@ -2,40 +2,40 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ProgramStructureDemoV1 - console",
+            "name": "A1CompilerVersionDemo - console",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ProgramStructureDemoV1/bin/Debug/net8.0/ProgramStructureDemoV1.dll",
+            "program": "${workspaceFolder}/A1CompilerVersionDemo/bin/Debug/net8.0/A1CompilerVersionDemo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ProgramStructureDemoV1",
+            "cwd": "${workspaceFolder}/A1CompilerVersionDemo",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
-            "name": "ProgramStructureDemoV2 - console",
+            "name": "A2VariablesDemo - console",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ProgramStructureDemoV2/bin/Debug/net8.0/ProgramStructureDemoV2.dll",
+            "program": "${workspaceFolder}/A2VariablesDemo/bin/Debug/net8.0/A2VariablesDemo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ProgramStructureDemoV2",
+            "cwd": "${workspaceFolder}/A2VariablesDemo",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
-            "name": "ProgramStructureDemoV3 - console",
+            "name": "A3InputOutputDemo - console",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ProgramStructureDemoV3/bin/Debug/net8.0/ProgramStructureDemoV3.dll",
+            "program": "${workspaceFolder}/A3InputOutputDemo/bin/Debug/net8.0/A3InputOutputDemo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ProgramStructureDemoV3",
+            "cwd": "${workspaceFolder}/A3InputOutputDemo",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "integratedTerminal",
             "stopAtEntry": false
