--- a/work/20231008cs12dn8/20231008cs12dn8.csproj
+++ b/work/20231008cs12dn8/20231008cs12dn8.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Using Include="System.Console" Static="true" />
+    <Using Include="System.Environment" Alias="Env" />
   </ItemGroup>
 
   <ItemGroup>
